rebrand as Hoshizora Chi and add rainbow in the dark

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "ABOUT"
-description: "「 But, who am I? 🌸 」"
+description: "お初にお目にかかります, お客様がお望みならどこでも駆けつけます"
 header-img: "img/post-bg-about.jpg"
 header-mask: 0.3
 multilingual: true
