--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: ARCHIVE
 layout: default
-description: "「 The Journey Begins 」"
+description: ""
 header-img: "img/post-bg-archive.png"
 nav-style: 'invert'
 ---
